--- a/index.html
+++ b/index.html
@@ -4,19 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header">
-        <div><a class="header__link" href="#"></a></div>
-        <div><a class="header__link" href="#"></a></div>
-        <div><a class="header__link" href="#"></a></div>
-        <div><a class="header__link" href="#"></a></div>
-        <div><a class="header__link" href="#"></a></div>
+    <header class="header wrapper">
+        <div><a class="header__link" href="#">Home</a></div>
+        <div><a class="header__link" href="#">About</a></div>
+        <div><a class="header__link" href="#">Services</a></div>
+        <div><a class="header__link" href="#">Blog</a></div>
+        <div><a class="header__link" href="#">Contact</a></div>
     </header>
     <main>
-        <section>
-<img src="image/Group 400.svg" alt="">
+        <section class="top__content wrapper">
+            <div class="top__info">
+                <h3 class="top__info__subtitle">Next genaretion platform</h3>
+                <h1 class="top__info__title">Artificial intelligence & Syber security</h1>
+                <p class="top__info__text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                <div class="top__buttons">
+                    <button class="button">Get Started</button>
+                    <button class="button"><svg width="19.500000" height="23.382690" viewBox="0 0 19.5 23.3827" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <path id="Polygon 1" d="M19.5 11.6913L0 0L0 23.3827L19.5 11.6913Z" fill="#FFFFFF" fill-opacity="1.000000" fill-rule="evenodd"/>
+                    </svg>
+                    Watch Video</button>
+                </div>
+            </div>
+            <div class="top__img__container">
+                <img class="top__img" src="image/top__image.png" alt="Rocket">
+            </div>
+        </section>
+        <section class="top__logos wrapper">
+            <div><img class="top__logo" src="image/logo1.svg" alt="Logo"></div>
+            <div><img class="top__logo" src="image/logo2.svg" alt="Logo"></div>
+            <div><img class="top__logo" src="image/logo3.svg" alt="Logo"></div> 
+            <div><img class="top__logo" src="image/logo4.svg" alt="Logo"></div>
         </section>
     </main>
 </body>
